Display Android Build Date

--- a/Android/app/src/main/res/layout/activity_main.xml
+++ b/Android/app/src/main/res/layout/activity_main.xml
@@ -82,4 +82,19 @@
     </LinearLayout>
 
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <!-- Other views can be added above this TextView if needed -->
+
+        <TextView
+            android:id="@+id/buildOn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:text="Build: " />
+
+    </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
